# whisper-llm-srt

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: llm_prompt.txt
data/sample/: filler_sample.txt
docs/: ai_manual.md  git_manual.md  python_manual.md  troubleshooting.md  uv_manual.md
resources/: prompt.txt
resources/sample/: prompt_sample.txt
src/: config.py  exceptions.py  formatter.py  llm_checker.py  main.py  pipeline.py  refiner.py  transcriber.py  utils.py
src/src/: llm_checker.py  transcriber.py
