[project]
name = "whisper-srt"
version = "0.1.0"
description = "動画または音声ファイルから10〜20文字に最適化されたプロ仕様のSRT字幕を出力するスクリプト"
readme = "README.md"
requires-python = ">=3.12"

# 必要なライブラリをここにすべて明記します
dependencies = [
    "openai-whisper",  # Whisper文字起こしAIの本体
    "tqdm",            # 進捗状況を表示するプログレスバー
    "budoux",          # Google製の日本語文節区切りライブラリ
]

# コマンドラインから一発起動するための設定（src/main.pyのmain関数を呼び出す）
[project.scripts]
whisper-srt = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatchlingにsrcフォルダをパッケージとして正しく認識させる設定
[tool.hatch.build.targets.wheel]
packages = ["src"]