[project]
name = "whisper-llm-srt"
version = "0.1.0"
description = "Whisper × ローカルLLM(ELYZA) × BudouX による高精度・美レイアウト字幕生成ツール"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "hirotatsuuu" }
]
# プロジェクトの実行に必要な外部ライブラリの定義
dependencies = [
    "openai-whisper>=20240930", # 高精度音声認識（耳）
    "ollama>=0.4.0",           # ローカルLLM制御（頭脳）
    "budoux>=0.6.0",           # Google製の洗練された文節区切り（デザイナー）
    "tqdm>=4.66.0",            # 処理の進行状況をターミナルにプログレスバーで可視化する
]

[project.scripts]
# 💡 「uv run whisper-llm-srt」と叩いた時に、main.py の main() 関数を実行する定義
whisper-llm-srt = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# ソースコードの位置を正しく認識させるための設定
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]